--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@angular/platform-browser-dynamic": "9.0.1",
     "@angular/router": "9.0.1",
     "@blox/material": "0.17.0",
-    "@material/animation": "5.0.0",
+    "@material/animation": "^5.0.0",
     "@material/auto-init": "5.0.0",
     "@material/base": "5.0.0",
     "@material/button": "5.0.0",
@@ -49,7 +49,7 @@
     "@material/theme": "5.0.0",
     "@material/toolbar": "2.3.0",
     "@material/top-app-bar": "5.0.0",
-    "@material/typography": "5.0.0",
+    "@material/typography": "^5.0.0",
     "core-js": "^3.6.4",
     "focus-trap": "5.1.0",
     "material-components-web": "5.0.0",
